# code-review-agent

./: .env.example  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
architecture/: index.html
config/: team-standards.json.example
configuration/: index.html
development/: index.html
docs/: architecture.md  configuration.md  development.md  getting-started.md  index.md  team-standards.md  usage.md
examples/: azure-pipeline.yml
getting-started/: index.html
mkdocs/docs/: development.md  getting-started.md  index.md  usage.md
search/: search_index.json
src/code_review_agent/: __init__.py  __main__.py  agent.py  graph.py  llm_config.py  models.py  standards.py
src/code_review_agent/analyzers/: __init__.py  impact_analyzer.py  static_analyzer.py
src/code_review_agent/checkers/: __init__.py  backend_checker.py  base_checker.py  frontend_checker.py  universal_checker.py
src/code_review_agent/integrations/: __init__.py  azure_devops.py
team-standards/: index.html
tests/: test_analyzer_integration.py  test_impact_analyzer.py  test_inline_comment.py  test_inline_comment_integration.py  test_review.py  test_static_analyzer.py
tests/test_data/: __init__.py  golden_dataset.py
usage/: index.html
